--- a/implementaysh.ipynb
+++ b/implementaysh.ipynb
@@ -6,15 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as whatcolourisyourbugatti"
+    "import numpy as np\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.10 ('mfvi-bnn-env')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d216099df1081d55199e0f9cff1bfa8160951e95da0a1d50853afcf740af046c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
