--- a/toy_regression.ipynb
+++ b/toy_regression.ipynb
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Theory \\& assumptions"
+    "##### Theory & assumptions"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "metadata": {},
    "source": [
     "- The neural network is a function that returns an output given the input and the model parameters, $\\hat{y} = f(x, \\boldsymbol{\\theta})$\n",
-    "- As in Coker et al. (2021), we assume (with i.i.d data) a Gaussian likelihood, $\\mathcal{L}(\\boldsymbol{\\theta}) = \\prod_n\\mathcal{N}(y_n|f(x_n,\\boldsymbol{\\theta}), \\sigma^2_{noise})$\n",
+    "- As in Coker et al. (2021), we assume (with i.i.d data) a Gaussian likelihood, $\\mathcal{L}(\\boldsymbol{\\theta}) = p(\\mathcal{D}|\\boldsymbol{\\theta}) = \\prod_n\\mathcal{N}(y_n|f(x_n,\\boldsymbol{\\theta}), \\sigma^2_{noise})$\n",
     "- We take independent Gaussian priors over the parameters, $p(\\boldsymbol{\\theta}) = \\mathcal{N}(\\boldsymbol{\\theta}|\\boldsymbol{0}, \\sigma_p^2\\mathbf{I})$, where $\\sigma_p$ is a variance hyperparameter\n",
     "- Since the network function is highly nonlinear, the true posterior distribution is intractable and so we resort to variational inference. Namely, we resort to a mean-field (diagonal) Gaussian variational distribution: $q_\\phi(\\boldsymbol{\\theta}) = \\prod_{i=1}^{|\\boldsymbol{\\theta}|}\\mathcal{N}(\\theta_i|\\mu_i, \\sigma_i^2)$ where $\\phi = \\{\\mu_i, \\sigma_i\\}$ are the variational parameters\n",
     "- As usual in variational inference, we wish to select the variational parameters by optimising the Kullback-Leibler (KL) divergence between the variational distribution and the posterior, however as usual this too is intractable and so we optimise the evidence lower-bound (ELBO) instead, which can be written as: $ELBO = \\mathbb{E}_{\\theta\\sim q_{\\phi}}[\\log\\mathcal{L}(\\boldsymbol{\\theta})] - KL[q_{\\phi}||p(\\boldsymbol{\\theta})]$. Looking at the two terms, we see that maximising the ELBO maximises the expected log likelihood (fit to the data) while minimising the KL divergence between the variational distribution and the prior distribution (the standard Bayesian \"Occam's Razor\" tradeoff)\n",
@@ -257,6 +257,16 @@
    "metadata": {},
    "source": [
     "##### Build Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random notes\n",
+    "\n",
+    "- loss is no longer going to be MSE, instead it will be negative ELBO (because we want to maximise ELBO...)\n",
+    "- how do we \"make the parameters have distributions\" in pytorch?"
    ]
   },
   {
