--- a/toy_regression.ipynb
+++ b/toy_regression.ipynb
@@ -244,20 +244,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The neural network is a function that returns an output given the input and the model parameters, $\\hat{y} = f(x, \\boldsymbol{\\theta})$\n",
-    "- We assume (with i.i.d data) a Gaussian likelihood, $\\mathcal{L}(\\boldsymbol{\\theta}) = p(\\mathcal{D}|\\boldsymbol{\\theta}) = \\prod_n\\mathcal{N}(y_n|f(x_n,\\boldsymbol{\\theta}), \\sigma^2_{noise})$\n",
-    "- We take independent Gaussian priors over the parameters, $p(\\boldsymbol{\\theta}) = \\mathcal{N}(\\boldsymbol{\\theta}|\\boldsymbol{0}, \\sigma_p^2\\mathbf{I})$, where $\\sigma_p$ is a variance hyperparameter\n",
-    "- Since the network function is highly nonlinear, the true posterior distribution is intractable and so we resort to variational inference. Namely, we resort to a mean-field (diagonal) Gaussian variational distribution: $q_\\phi(\\boldsymbol{\\theta}) = \\prod_{i=1}^{|\\boldsymbol{\\theta}|}\\mathcal{N}(\\theta_i|\\mu_i, \\sigma_i^2)$ where $\\phi = \\{\\mu_i, \\sigma_i\\}$ are the variational parameters\n",
-    "- As usual in variational inference, we wish to select the variational parameters by minimising the Kullback-Leibler (KL) divergence between the variational distribution and the posterior, however as usual this too is intractable and so we optimise the evidence lower-bound (ELBO) instead, which can be written as: $ELBO = \\mathbb{E}_{\\theta\\sim q_{\\phi}}[\\log\\mathcal{L}(\\boldsymbol{\\theta})] - KL[q_{\\phi}||p(\\boldsymbol{\\theta})]$. Looking at the two terms, we see that maximising the ELBO maximises the expected log likelihood (fit to the data) while minimising the KL divergence between the variational distribution and the prior distribution (the standard Bayesian \"Occam's Razor\" tradeoff)\n",
-    "- Since both the variational and prior distributions are taken to be Gaussian, the KL divergence between them can be calculated in closed form. Taking $k$ to denote the number of parameters, $KL[q_{\\phi}||p(\\boldsymbol{\\theta})] = \\frac{1}{2}(\\sum_i^k\\frac{\\mu_i^2 + \\sigma_i^2}{\\sigma_p^2} - 2\\sum_i^k\\log\\frac{\\sigma_i}{\\sigma_p} - k)$\n",
-    "- Thus the ELBO can be written as: $ELBO = \\mathbb{E}_{\\theta\\sim q_{\\phi}}[\\log\\mathcal{L}(\\boldsymbol{\\theta})] - (\\frac{1}{2}(\\sum_i^k\\frac{\\mu_i^2 + \\sigma_i^2}{\\sigma_p^2} - 2\\sum_i^k\\log\\frac{\\sigma_i}{\\sigma_p} - k))$, where we can estimate the first term by sampling and using the *reparameterisation trick* (Kingma and Welling, 2014)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Build Model"
+    "- The neural network is a function that returns an output given the input and the model parameters, $$\\hat{y} = f(x, \\boldsymbol{\\theta})$$\n",
+    "- We assume (with i.i.d data) a Gaussian likelihood, $$\\mathcal{L}(\\boldsymbol{\\theta}) = p(\\mathcal{D}|\\boldsymbol{\\theta}) = \\prod_n\\mathcal{N}(y_n|f(x_n,\\boldsymbol{\\theta}), \\sigma^2_{noise})$$ where $\\sigma_{noise}$ is the variance parameter of the output neuron\n",
+    "- We take independent Gaussian priors over the parameters, $$p(\\boldsymbol{\\theta}) = \\mathcal{N}(\\boldsymbol{\\theta}|\\boldsymbol{0}, \\sigma_p^2\\mathbf{I})$$ where $\\sigma_p$ is a variance hyperparameter\n",
+    "- Since the network function is highly nonlinear, the true posterior distribution is intractable and so we resort to variational inference. Namely, we resort to a mean-field (diagonal) Gaussian variational distribution: $$q_\\phi(\\boldsymbol{\\theta}) = \\prod_{i=1}^{|\\boldsymbol{\\theta}|}\\mathcal{N}(\\theta_i|\\mu_i, \\sigma_i^2)$$ where $\\phi = \\{\\mu_i, \\sigma_i\\}$ are the variational parameters\n",
+    "- As usual in variational inference, we wish to select the variational parameters by minimising the Kullback-Leibler (KL) divergence between the variational distribution and the posterior, however as usual this too is intractable and so we optimise the evidence lower-bound (ELBO) instead, which can be written as: $$ELBO = \\mathbb{E}_{\\theta\\sim q_{\\phi}}[\\log\\mathcal{L}(\\boldsymbol{\\theta})] - KL[q_{\\phi}||p(\\boldsymbol{\\theta})]$$ Looking at the two terms, we see that maximising the ELBO maximises the expected log likelihood (fit to the data) while minimising the KL divergence between the variational distribution and the prior distribution (the standard Bayesian \"Occam's Razor\" tradeoff)\n",
+    "- Since both the variational and prior distributions are taken to be Gaussian, the KL divergence between them can be calculated in closed form. Taking $k$ to denote the number of parameters, $$KL[q_{\\phi}||p(\\boldsymbol{\\theta})] = \\frac{1}{2}(\\sum_i^k\\frac{\\mu_i^2 + \\sigma_i^2}{\\sigma_p^2} - 2\\sum_i^k\\log\\frac{\\sigma_i}{\\sigma_p} - k)$$\n",
+    "- Thus the ELBO can be written as: $$ELBO = \\mathbb{E}_{\\theta\\sim q_{\\phi}}[\\log\\mathcal{L}(\\boldsymbol{\\theta})] - \\frac{1}{2}\\sum_i^k[\\frac{\\mu_i^2 + \\sigma_i^2}{\\sigma_p^2} - 2\\log\\frac{\\sigma_i}{\\sigma_p} - 1]$$ where we can estimate the first term by sampling and using the *reparameterisation trick* (Kingma and Welling, 2014)"
    ]
   },
   {
@@ -267,26 +260,164 @@
     "Random notes\n",
     "\n",
     "- loss is no longer going to be MSE, instead it will be negative ELBO (because we want to maximise ELBO...). We will need to define this loss manually\n",
-    "- how do we \"make the parameters have distributions\" in pytorch?\n",
-    "- the parameters argument in the optimiser will need to be different"
+    "- how do we \"make the parameters have distributions\" in pytorch? *we define two networks, one for variational means, one for variational variances*\n",
+    "- the parameters argument in the optimiser will need to be different\n",
+    "- how do we sample from the log likelihood?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Build model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BNN(torch.nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        # variational means for network params \n",
+    "        self.mu_q = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(1, 100),\n",
+    "            torch.nn.ELU(),\n",
+    "            torch.nn.Linear(100, 100),\n",
+    "            torch.nn.ELU(),\n",
+    "            torch.nn.Linear(100, 100),\n",
+    "            torch.nn.ELU(),\n",
+    "            torch.nn.Linear(100, 100),\n",
+    "            torch.nn.ELU(),\n",
+    "            torch.nn.Linear(100, 1),\n",
+    "        )\n",
+    "\n",
+    "        # variational log variances for network params\n",
+    "        # use log because log variance can be negative, variance cannot\n",
+    "        self.logvar_q = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(1, 100),\n",
+    "            torch.nn.ELU(),\n",
+    "            torch.nn.Linear(100, 100),\n",
+    "            torch.nn.ELU(),\n",
+    "            torch.nn.Linear(100, 100),\n",
+    "            torch.nn.ELU(),\n",
+    "            torch.nn.Linear(100, 100),\n",
+    "            torch.nn.ELU(),\n",
+    "            torch.nn.Linear(100, 1),\n",
+    "        )\n",
+    "    \n",
+    "    def reparameterise(self, mu, logvar):\n",
+    "        sig = torch.exp(0.5 * logvar)\n",
+    "        epsilon = torch.randn_like(sig)\n",
+    "        return mu + sig*epsilon\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        mu = self.mu_q(x)\n",
+    "        logvar = self.logvar_q(x)\n",
+    "        return self.reparameterise(mu, logvar), mu, logvar\n",
+    "\n",
+    "# Gaussian log likelihood for a single datapoint\n",
+    "def ll(y, mu, logvar):\n",
+    "    sig = torch.exp(0.5 * logvar)\n",
+    "    return - 0.5 * torch.log(2 * np.pi * sig**2) - (y - mu)**2 / (2 * sig**2)\n",
+    "\n",
+    "# compute ELBO\n",
+    "def elbo(y_pred, y, mu, logvar, prior_var):\n",
+    "    exp_ll = ll(y, mu, logvar).mean() # expected log likelihood\n",
+    "    # or do we use the below from Kingma and Welling 2013?\n",
+    "    # reconstruction_error = (0.5 * (y - y_pred)**2).sum()\n",
+    "\n",
+    "    kl = 0.5 * torch.sum(((mu**2 + torch.exp(logvar)) / prior_var) - logvar + torch.log(prior_var) - 1)\n",
+    "\n",
+    "    return exp_ll - kl\n",
+    "\n",
+    "# take negative of elbo as loss since we have SGD at our disposal, not SGA\n",
+    "def elbo_loss(y_pred, y, mu, logvar, prior_var):\n",
+    "    return - elbo(y_pred, y, mu, logvar, prior_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bnn_model = BNN()\n",
+    "\n",
+    "prior_var = torch.tensor([1.0])\n",
+    "\n",
+    "opt = torch.optim.SGD(\n",
+    "    bnn_model.parameters(),\n",
+    "    lr = 0.001\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Train model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (15) must match the size of tensor b (35) at non-singleton dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m/home/troch/dev/mfvi_bnn/toy_regression.ipynb Cell 22\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m l \u001b[39m=\u001b[39m elbo_loss(y_tr_pred, y_tr, mu, logvar, prior_var)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m tr_loss_evo\u001b[39m.\u001b[39mappend(l\u001b[39m.\u001b[39mitem())\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m te_loss_evo\u001b[39m.\u001b[39mappend(elbo_loss(bnn_model(x_te)[\u001b[39m0\u001b[39;49m], y_te, mu, logvar, prior_var)\u001b[39m.\u001b[39mitem())\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m l\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m opt\u001b[39m.\u001b[39mstep()\n",
+      "\u001b[1;32m/home/troch/dev/mfvi_bnn/toy_regression.ipynb Cell 22\u001b[0m in \u001b[0;36melbo_loss\u001b[0;34m(y_pred, y, mu, logvar, prior_var)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=58'>59</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39melbo_loss\u001b[39m(y_pred, y, mu, logvar, prior_var):\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=59'>60</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m-\u001b[39m elbo(y_pred, y, mu, logvar, prior_var)\n",
+      "\u001b[1;32m/home/troch/dev/mfvi_bnn/toy_regression.ipynb Cell 22\u001b[0m in \u001b[0;36melbo\u001b[0;34m(y_pred, y, mu, logvar, prior_var)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=48'>49</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39melbo\u001b[39m(y_pred, y, mu, logvar, prior_var):\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=49'>50</a>\u001b[0m     exp_ll \u001b[39m=\u001b[39m ll(y, mu, logvar)\u001b[39m.\u001b[39mmean() \u001b[39m# expected log likelihood\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=50'>51</a>\u001b[0m     \u001b[39m# or do we use the below from Kingma and Welling 2013?\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=51'>52</a>\u001b[0m     \u001b[39m# reconstruction_error = (0.5 * (y - y_pred)**2).sum()\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=53'>54</a>\u001b[0m     kl \u001b[39m=\u001b[39m \u001b[39m0.5\u001b[39m \u001b[39m*\u001b[39m torch\u001b[39m.\u001b[39msum(((mu\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m \u001b[39m+\u001b[39m torch\u001b[39m.\u001b[39mexp(logvar)) \u001b[39m/\u001b[39m prior_var) \u001b[39m-\u001b[39m logvar \u001b[39m+\u001b[39m torch\u001b[39m.\u001b[39mlog(prior_var) \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m)\n",
+      "\u001b[1;32m/home/troch/dev/mfvi_bnn/toy_regression.ipynb Cell 22\u001b[0m in \u001b[0;36mll\u001b[0;34m(y, mu, logvar)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=43'>44</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mll\u001b[39m(y, mu, logvar):\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m     sig \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mexp(\u001b[39m0.5\u001b[39m \u001b[39m*\u001b[39m logvar)\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/troch/dev/mfvi_bnn/toy_regression.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m-\u001b[39m \u001b[39m0.5\u001b[39m \u001b[39m*\u001b[39m torch\u001b[39m.\u001b[39mlog(\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39mpi \u001b[39m*\u001b[39m sig\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m) \u001b[39m-\u001b[39m (y \u001b[39m-\u001b[39;49m mu)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m \u001b[39m/\u001b[39m (\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m sig\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (15) must match the size of tensor b (35) at non-singleton dimension 0"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")"
+    "tr_loss_evo = []\n",
+    "te_loss_evo = []\n",
+    "\n",
+    "for _ in range(20000):  # epochs\n",
+    "    bnn_model.zero_grad()\n",
+    "    y_tr_pred, mu, logvar = bnn_model(x_tr)\n",
+    "    l = elbo_loss(y_tr_pred, y_tr, mu, logvar, prior_var)\n",
+    "    tr_loss_evo.append(l.item())\n",
+    "    te_loss_evo.append(elbo_loss(bnn_model(x_te)[0], y_te, mu, logvar, prior_var).item())\n",
+    "    l.backward()\n",
+    "    opt.step()\n",
+    "\n",
+    "plt.plot(tr_loss_evo, label='Train dataset loss')\n",
+    "plt.plot(te_loss_evo, label='Test dataset loss')\n",
+    "plt.ylabel('ELBO loss')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend()\n",
+    "plt.title('Loss Evolution')\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Test model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
