added kl comment

--- a/toy_regression.ipynb
+++ b/toy_regression.ipynb
@@ -444,6 +444,7 @@
     "        \"\"\"Computes the ELBO and returns its negative\"\"\"\n",
     "        \n",
     "        exp_ll = self.ll(y, y_pred)\n",
+    "        ##### manually scale the kl term to avoid kl domination #####\n",
     "        kl = self.kl()/5\n",
     "\n",
     "        # return - exp_ll, exp_ll, exp_ll\n",
